# AskDB

./: .gitignore  README.md  askdb_agno.py  check_agno_sessions.py  check_runs_detail.py  check_users.py  demo_permissions.py  env_example.txt  generate_test_report.py  main.py  pyproject.toml  request.txt  requirements.txt  start_backend.py  start_frontend.py  test_agno_implementation.py  test_api.py  test_conversation_system.py  test_full_tool_calls_flow.py  test_jwt_auth.py  test_live_services.py  test_permissions_detail.py  test_stream_endpoint.py  test_streaming_fix.py  test_streaming_with_tools.py  test_tool_calls_extraction.py  test_vector_search_api.py
agent/: __init__.py  core.py  prompting.py  safety.py
backend/: agents.py  conversation_db.py  main.py  migrate_conversations.py  query_recommender.py
config/: __init__.py  database_configs.py  permissions.yaml  settings.py
dialects/: __init__.py  dialect_manager.py  opengauss_dialect.py
docs/: AGNO_RESPONSE_INFO.md  AI消息重复问题修复.md  AI行为优化说明.md  COMPREHENSIVE_TEST_REPORT.md  DANGER_CONFIRMATION_FLOW.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FRONTEND_DEBUG_GUIDE.md  FUNCTIONAL_TEST_REPORT.md  PROJECT_DELIVERY.md  QUICK_START.md  QUICK_TEST.md  README_AGNO.md  RELEASE_v2.0.md  TESTING_COMPLETE.md  TEST_REPORT_SUMMARY.md  使用说明.md  停止旧进程.md  完成检查清单.md  完整修复-保存和展开.md  完整修复方案.md  完整流式修复说明.md  工具调用显示-改进说明.md  工具调用显示修复说明.md  工具调用显示功能-修复说明.md  工具调用显示功能说明.md  工具调用调试指南.md  工具调用顺序显示实现.md  快速测试指南.md  数据库agent实现要求.md  权限控制功能实现总结.md  权限控制功能说明.md  流式实现完成总结.md  流式对话测试说明.md  流式工具调用修复说明.md  测试执行总结.md  测试说明.md  简化诊断.md  紧急修复步骤.md  诊断命令.md  (+2 more)
fallback_frontend/: index.html
frontend/: index.html  package-lock.json  package.json
lib/: __init__.py  permissions.py  safety.py
models/: __init__.py  conversation.py  llm_interface.py
tests/: __init__.py  api_tests.sh  check_agno_sessions.py  check_runs_detail.py  run_all_tests.sh  run_tests.py  test_agent.py  test_agent_response.py  test_crud_permissions.py  test_crud_simple.py  test_data_profiling.py  test_demo.py  test_e2e.py  test_enhanced_system.py  test_frontend.py  test_full_tool_calls_flow.py  test_permissions.py  test_run_response.py  test_safety.py  test_simple_response.py  test_stream_endpoint.py  test_streaming_real.py  test_streaming_web_search.py  test_tool_calls_demo.py  test_tool_calls_extraction.py  test_tools.py  test_vector_search_api.py  test_web.py  verify_installation.py
tools/: __init__.py  agno_tools.py  database.py  enhanced_tools.py  schema.py  web_search.py  (+1 more)
(+17 files in other folders)
